--- a/mandelbulber2/formula/ui/transf_difs_aux_color.ui
+++ b/mandelbulber2/formula/ui/transf_difs_aux_color.ui
@@ -39,7 +39,7 @@
      </property>
      <property name="text">
       <string>COLORING . Uses Material Tab - Color by numbers - 
-auxillary .coloring components - aux.color weight</string>
+auxillary coloring components - aux.color weight</string>
      </property>
     </widget>
    </item>
@@ -134,15 +134,8 @@ provides complete control</string>
      <property name="spacing">
       <number>2</number>
      </property>
-     <item row="2" column="0" colspan="2">
-      <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabled_false">
-       <property name="text">
-        <string>additional color controls</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_y">
+     <item row="7" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -169,22 +162,8 @@ provides complete control</string>
        </property>
       </widget>
      </item>
-     <item row="8" column="0">
-      <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledA">
-       <property name="text">
-        <string>if aux.dist</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="label_53">
-       <property name="text">
-        <string>abs(z.x*z.y)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_z">
+     <item row="6" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_w">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -225,10 +204,34 @@ provides complete control</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="label_55">
+     <item row="6" column="0">
+      <widget class="QLabel" name="label_57">
        <property name="text">
-        <string>max(z.x, z.y)</string>
+        <string>z.z factor</string>
+       </property>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QFrame" name="frame">
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
+       </property>
+       <property name="frameShadow">
+        <enum>QFrame::Raised</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0" colspan="2">
+      <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabled_false">
+       <property name="text">
+        <string>additional color controls</string>
+       </property>
+      </widget>
+     </item>
+     <item row="7" column="0">
+      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+       <property name="text">
+        <string>round</string>
        </property>
       </widget>
      </item>
@@ -288,8 +291,8 @@ provides complete control</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox_transf_scale_1">
+     <item row="4" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_y">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -316,15 +319,29 @@ provides complete control</string>
        </property>
       </widget>
      </item>
-     <item row="7" column="0">
-      <widget class="MyCheckBox" name="checkBox_transf_function_enabled_false">
+     <item row="8" column="0">
+      <widget class="MyCheckBox" name="checkBox_fold_color_aux_color_enabledA">
        <property name="text">
-        <string>round</string>
+        <string>if aux.dist</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="1">
-      <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_w">
+     <item row="4" column="0">
+      <widget class="QLabel" name="label_55">
+       <property name="text">
+        <string>max(z.x, z.y)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="label_53">
+       <property name="text">
+        <string>abs(z.x*z.y)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="5" column="1">
+      <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_z">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
          <horstretch>0</horstretch>
@@ -351,10 +368,111 @@ provides complete control</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0">
-      <widget class="QLabel" name="label_57">
+    </layout>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="0,1,0,1">
+     <property name="topMargin">
+      <number>0</number>
+     </property>
+     <item>
+      <widget class="QLabel" name="label_80">
        <property name="text">
-        <string>z.z factor</string>
+        <string>testing  start iteration=</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="MySpinBox" name="spinboxInt_transf_start_iterations_A">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimum">
+        <number>0</number>
+       </property>
+       <property name="maximum">
+        <number>999</number>
+       </property>
+       <property name="value">
+        <number>0</number>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QLabel" name="label_65">
+       <property name="text">
+        <string>stop iteration=</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="MySpinBox" name="spinboxInt_transf_stop_iterations_A">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Preferred" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="maximum">
+        <number>999</number>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QLabel" name="label_58">
+     <property name="text">
+      <string>reduce ray step is faster</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout_27" columnstretch="0,0,1">
+     <property name="spacing">
+      <number>2</number>
+     </property>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label_182">
+       <property name="text">
+        <string>aux.dist tweak:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="MyDoubleSpinBox" name="spinbox_analyticDE_scale_1">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="prefix">
+        <string/>
+       </property>
+       <property name="suffix">
+        <string/>
+       </property>
+       <property name="decimals">
+        <number>2</number>
+       </property>
+       <property name="minimum">
+        <double>0.000000000000000</double>
+       </property>
+       <property name="maximum">
+        <double>99.989999999999995</double>
+       </property>
+       <property name="singleStep">
+        <double>0.100000000000000</double>
        </property>
       </widget>
      </item>
