--- a/mandelbulber2/formula/ui/difs_box_v1.ui
+++ b/mandelbulber2/formula/ui/difs_box_v1.ui
@@ -368,7 +368,7 @@
         <item row="3" column="0" rowspan="3">
          <widget class="QLabel" name="label_108">
           <property name="text">
-           <string>box fold:</string>
+           <string>fold:</string>
           </property>
          </widget>
         </item>
